# galerie

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: rust-style.md  settings.local.json
.claude/commands/: new-release.md
.github/workflows/: release.yml
plans/: heic-support.md
src/: builtin_themes.rs  config.rs  error.rs  i18n.rs  main.rs  minify.rs  photos.rs  pipeline.rs  processing.rs  theme.rs  theme_build.rs  util.rs  watch.rs
themes/basic/static/: style.css
themes/basic/templates/: base.html  index.html  photo.html
themes/fancy/: README.md  package-lock.json  package.json  theme.toml  tsconfig.json  vite.config.ts
themes/fancy/src/: config.ts  main.ts  main.tsx  state.ts  types.ts
themes/fancy/src/components/: controls.ts  drawer.ts  filmstrip.ts  grid.ts  map.ts  viewer.ts
themes/fancy/src/components/App/: App.tsx
themes/fancy/src/components/Drawer/: DownloadLink.tsx  Drawer.tsx  MetaSection.tsx  index.ts
themes/fancy/src/components/Filmstrip/: Filmstrip.tsx  FilmstripThumb.tsx  FilmstripToggle.tsx  index.ts
themes/fancy/src/components/Footer/: Footer.tsx
themes/fancy/src/components/Grid/: Grid.tsx  PhotoTile.tsx  SortControl.tsx  index.ts
themes/fancy/src/components/Header/: AlbumPicker.tsx  Header.tsx  LangPicker.tsx  ThemeToggle.tsx  index.ts
themes/fancy/src/components/Map/: Map.tsx
themes/fancy/src/components/UI/: Button.tsx  Icons.tsx  index.ts
themes/fancy/src/components/Viewer/: Viewer.tsx  ViewerImage.tsx  index.ts
themes/fancy/src/components/ViewerControls/: ViewerControls.tsx  index.ts
themes/fancy/src/context/: I18nContext.tsx
themes/fancy/src/hooks/: index.ts  useDropdown.ts  useHashRouter.ts  useImageLoader.ts  useIntersectionObserver.ts  useKeyboardNav.ts  useMasonry.ts  useTheme.ts  useTouchSwipe.ts
themes/fancy/src/services/: data.ts  i18n.ts  router.ts
themes/fancy/src/store/: galleryStore.ts
themes/fancy/src/utils/: dom.ts  format.ts  hash.ts  image.ts
themes/fancy/static/: app.js  style.css
themes/fancy/styles/: _base.scss  _bigPicture.scss  _buttons.scss  _drawer.scss  _filmstrip.scss  _footer.scss  _grid.scss  _header.scss  _responsive.scss  _sortControl.scss  _utilities.scss  _variables.scss  _viewer.scss  main.scss
themes/fancy/templates/: base.html  index.html  photo.html
wiki/: README.md  hosting.md  i18n.md  image-processing.md  install.md  raspberry-pi-setup.md  site-config.md  template-context.md  templates.md  theme-structure.md
