[package]
name = "galerie"
version = "0.1.5"
edition = "2024"

[dependencies]
thiserror = "1"
tracing = "0.1"
toml = "0.8"
image = "0.25"
walkdir = "2"
little_exif = "0.6"
gufo-xmp = "0.3"
gufo-common = "1"
tera = "1"
tiny_http = "0.12"
rayon = "1"
blake3 = "1"
reverse_geocoder = "4"
webp = "0.3"
include_dir = "0.7"
which = { version = "7", default-features = false }
minify-html = "0.15"
lightningcss = "1.0.0-alpha.68"
[dependencies.oxc]
version = "0.107"
features = ["codegen", "minifier"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.notify]
version = "7"
default-features = false
features = ["macos_fsevent"]

[build-dependencies]
which = { version = "7", default-features = false }
ignore = "0.4"

[dev-dependencies]
test-case = "3"
tempfile = "3"

# Optimize image processing even in dev builds (otherwise unusably slow)
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3

[profile.dev.package.blake3]
opt-level = 3

[profile.dev.package.webp]
opt-level = 3

[profile.dev.package.libwebp-sys]
opt-level = 3

[profile.dev.package.little_exif]
opt-level = 3

[profile.dev.package.reverse_geocoder]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

[profile.distribute]
inherits = "release"
strip = "symbols"
